--- a/Changes
+++ b/Changes
@@ -1,10 +1,34 @@
 Revision history for AnyEvent::MP
 
-TODO: global protocol fix?
 TODO: testsuite
-TODO: make more parameters configurable: framing, tls, auth, timeouts
 TODO: intro: maybe simple job pool example?
-TODO: aemp manpage more examples
+TODO: intro: mention watchdog...
+
+1.1  Fri Sep 11 04:34:03 CEST 2009
+	- bumped the transport protocol to version 1 - sorry, but there
+          were too many bugfixes/changes.
+	- new function AnyEvent::MP::cal for simple rpc.
+	- renamed AnyEvent::MP::Global functions to grp_reg|get|mon.
+        - implemented monitoring for Global groups.
+	- removed all userspace time-outs from the transport, instead
+          rely on tcp retransmit timeouts and tcp keepalive.
+	- spawn now delays spawns on the local node artificially, so
+          it can return before invoking the init function.
+        - break endless recursion between ping-pong ports on the local
+          node after ~50 iterations.
+        - support JSON-encoded aemp arguments.
+        - added aemp restart.
+        - support for starting init functions with parameters added.
+        - data_format, auth_offer and auth_accept are now configurable, albeit
+          not documented.
+        - new service: AnyEvent::MP::LogCatcher.
+        - rely on perl srand'ing better than we could.
+        - try to backport to 5.8.2, unfortunately, recursive dependencies
+          rely on Module::Build, which fails at 5.8.7, so YMMV.
+        - use a vastly different reseeding strategy.
+        - use seed nodes to notify nodes about new nodes.
+        - in the case where a ndoe learns new addresses after it tried
+          connecting, prefer the new addrseses over the old ones.
 
 1.0  Wed Sep  2 20:40:43 CEST 2009
 	- randomise more connection times, but reduce delay to 0.2s (seeds)
